# urfu-fp-intro-20

./: .travis.yml  README.md  cabal.project  stack.yaml  urfufpcourse20.cabal
.github/workflows/: haskell.yml
app/: Main.hs
src/: Lecture00.hs  Lecture01.hs  Lecture02.hs  Lecture03.hs  Lecture04.hs  Lecture05.hs  Lecture06.hs  Lecture07.hs
src/Lecture06/: XsOs.hs
src/Lecture07/: Money.hs
test/: Lecture00Spec.hs  Lecture01Spec.hs  Lecture02Spec.hs  Lecture03Spec.hs  Lecture04Spec.hs  Lecture05Spec.hs  Lecture06Spec.hs  Lecture07Spec.hs
