cabal-version:       2.4
name:                urfufpcourse20
version:             0.1.0.0

library
  exposed-modules:     Lecture00
                     , Lecture01
                     , Lecture02
                     , Lecture03
  default-extensions:  LambdaCase
  build-depends:       base >= 4.12.0.0
                     , mtl >= 2.2.0
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -Wall
                       -Werror
                       -Wno-name-shadowing
                       -Wno-unused-matches
                       -Wno-type-defaults

executable spec
  hs-source-dirs:     test
  main-is:            Spec.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      urfufpcourse20
                    , base >= 4.8
                    , hspec >= 2.7.1
                    , QuickCheck >= 2.13.0
                    , time
                    , mikrokosmos == 0.8.0
  ghc-options:        -Wall
                      -threaded
                      -fwarn-incomplete-patterns
  other-modules:      Lecture00Spec
                    , Lecture01Spec
                    , Lecture02Spec
                    , Lecture03Spec
  build-tool-depends: hspec-discover:hspec-discover == 2.*

executable lambda
  hs-source-dirs:     app
  main-is:            Main.hs
  default-language:   Haskell2010
  default-extensions: OverloadedStrings
  build-depends:      urfufpcourse20
                    , base >= 4.8
                    , hspec >= 2.7.1
                    , QuickCheck >= 2.13.0
                    , time
                    , mikrokosmos == 0.8.0
  ghc-options:        -Wall
                      -threaded
                      -fwarn-incomplete-patterns
